--- a/lib/ext/cryptocell-312-runtime/codesafe/src/psa_driver_api/CMakeLists.txt
+++ b/lib/ext/cryptocell-312-runtime/codesafe/src/psa_driver_api/CMakeLists.txt
@@ -7,22 +7,22 @@
 
 target_include_directories(${CC312_LIB_TARGET}
     PUBLIC
-        include
-        include/internal
         .
+        include
 )
 
 target_sources(${CC312_LIB_TARGET}
     PRIVATE
-        src/cc3xx_psa_hash.c
-        src/cc3xx_psa_cipher.c
-        src/cc3xx_psa_mac.c
-        src/cc3xx_psa_entropy.c
-        src/cc3xx_psa_key_agreement.c
-        src/cc3xx_psa_asymmetric_signature.c
-        src/cc3xx_psa_asymmetric_encryption.c
-        src/cc3xx_psa_key_generation.c
-
+        src/cc3xx_hash.c
+        src/cc3xx_cipher.c
+        src/cc3xx_mac.c
+        src/cc3xx_entropy.c
+        src/cc3xx_key_agreement.c
+        src/cc3xx_asymmetric_signature.c
+        src/cc3xx_asymmetric_encryption.c
+        src/cc3xx_key_generation.c
+        src/cc3xx_aead.c
+        # Internal sources
         src/cc3xx_internal_asn1_util.c
         src/cc3xx_internal_ecc_util.c
         src/cc3xx_internal_rsa_util.c
@@ -31,11 +31,9 @@ target_sources(${CC312_LIB_TARGET}
         src/cc3xx_internal_aes.c
         src/cc3xx_internal_chacha20.c
         src/cc3xx_internal_ecdh.c
-
-        src/aead/cc3xx_psa_aead.c
-        src/aead/cc3xx_psa_aead_ccm.c
-        src/aead/cc3xx_psa_aead_gcm.c
-        src/aead/cc3xx_psa_aead_chacha20_poly1305.c
+        src/cc3xx_internal_ccm.c
+        src/cc3xx_internal_gcm.c
+        src/cc3xx_internal_chacha20_poly1305.c
 )
 
 target_compile_definitions(${CC312_LIB_TARGET}
