--- a/secure_fw/partitions/ns_agent_tz/CMakeLists.txt
+++ b/secure_fw/partitions/ns_agent_tz/CMakeLists.txt
@@ -1,9 +1,14 @@
 #-------------------------------------------------------------------------------
 # Copyright (c) 2021, Arm Limited. All rights reserved.
+# Copyright (c) 2021, Cypress Semiconductor Corporation. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
 #-------------------------------------------------------------------------------
+
+if (TFM_MULTI_CORE_TOPOLOGY)
+    return()
+endif()
 
 cmake_minimum_required(VERSION 3.15)
 cmake_policy(SET CMP0079 NEW)
@@ -14,12 +19,12 @@ endif()
 
 target_sources(tfm_spm
     PRIVATE
-        $<$<NOT:$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>>:${CMAKE_CURRENT_SOURCE_DIR}/ns_agent.c>
+        $<$<NOT:$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>>:${CMAKE_CURRENT_SOURCE_DIR}/ns_agent_tz.c>
 )
 
 target_sources(tfm_partitions
     INTERFACE
-        ${CMAKE_CURRENT_SOURCE_DIR}/load_info_ns_agent.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/load_info_ns_agent_tz.c
 )
 
 # If this is added to the spm, it is discarded as it is not used. Since the
