Build: Exclude mbedTLS targets from all
This patch makes sure that mbedTLS specific targets
are not added by default to the all target. This
allows to avoid installing them by default as they
are not needed/used and allow to build them only
when pulled in as a dependency from other targets.

Signed-off-by: Antonio de Angelis <antonio.deangelis@arm.com>
Change-Id: Ic1d8f8efdf8a706a2e1d6361fb1c9815e8da711f

--- a/secure_fw/partitions/crypto/CMakeLists.txt
+++ b/secure_fw/partitions/crypto/CMakeLists.txt
@@ -167,7 +167,7 @@ set(MBEDTLS_TARGET_PREFIX crypto_service_)
 # symbols whild optimizing space.
 set(SAVED_BUILD_TYPE ${CMAKE_BUILD_TYPE})
 set(CMAKE_BUILD_TYPE ${MBEDCRYPTO_BUILD_TYPE})
-add_subdirectory(${MBEDCRYPTO_PATH} ${CMAKE_CURRENT_BINARY_DIR}/mbedcrypto)
+add_subdirectory(${MBEDCRYPTO_PATH} ${CMAKE_CURRENT_BINARY_DIR}/mbedcrypto EXCLUDE_FROM_ALL)
 set(CMAKE_BUILD_TYPE ${SAVED_BUILD_TYPE} CACHE STRING "Build type: [Debug, Release, RelWithDebInfo, MinSizeRel]" FORCE)
 
 if(NOT TARGET crypto_service_mbedcrypto)
