Add SLIH to ns_agent_mailbox
Add ns_agent_mailbox.c with code for the new partition. In there,
boot the NS core, initialise the mailbox, and then enter a while
loop waiting for the new (interrupt) signal. Also in this file is
the required SLIH initialisation function.
Move the secure mailbox into the new partition.
Modify the platform-specific interrupt handler to add the
required SLIH functionality. Add the SLIH interrupt init function.
Modify the yaml file for the partition to remove the dummy service,
switch to the new partition entry point, add dependencies, and to
add the actual IRQ.
Add a #define for the MAILBOX_IRQ to region_defs.h for the three
platforms that support dual-core.
Add idle_partition to multi-core builds.
Call to process mailbox directly from ns_agent_mailbox partition,
rather than triggering a PendSV. Remove corresponding mailbox
polling from do_schedule().
Remove multi-core-specific code from tfm_spm_is_ns_caller() and
tfm_spm_get_caller_privilege_mode().

Change-Id: Ia94813ba95e08bf5d4684dde17832a5de8bc9d45
Signed-off-by: Chris Brand <chris.brand@cypress.com>

--- a/secure_fw/partitions/ns_agent_mailbox/CMakeLists.txt
+++ b/secure_fw/partitions/ns_agent_mailbox/CMakeLists.txt
@@ -15,6 +15,21 @@ cmake_policy(SET CMP0079 NEW)
 
 add_library(tfm_psa_rot_partition_ns_agent_mailbox STATIC)
 
+target_sources(tfm_psa_rot_partition_ns_agent_mailbox
+    PRIVATE
+        ${CMAKE_SOURCE_DIR}/secure_fw/spm/cmsis_psa/tfm_rpc.c
+        $<$<NOT:$<BOOL:${TFM_PLAT_SPECIFIC_MULTI_CORE_COMM}>>:${CMAKE_SOURCE_DIR}/secure_fw/spm/cmsis_psa/tfm_spe_mailbox.c>
+        ns_agent_mailbox.c
+)
+
+target_link_libraries(tfm_psa_rot_partition_ns_agent_mailbox
+    PRIVATE
+        platform_common_interface
+        psa_interface
+        tfm_spm
+        tfm_sprt
+)
+
 # The generated sources
 target_sources(tfm_psa_rot_partition_ns_agent_mailbox
     PRIVATE
