--- a/tools/tfm_psa_ff_test_manifest_list.yaml
+++ b/tools/tfm_psa_ff_test_manifest_list.yaml
@@ -15,7 +15,7 @@
       "name": "PSA FF Test Client Partition",
       "short_name": "PSA_FF_TEST_CLIENT",
       "manifest": "${PSA_ARCH_TESTS_PATH}/api-tests/platform/manifests/client_partition_psa.json",
-      "source_path":"${PSA_ARCH_TESTS_PATH}",
+      "output_path": "api-tests/platform/manifests",
       "conditional": "PSA_API_TEST_IPC",
       "version_major": 0,
       "version_minor": 1,
@@ -33,7 +33,7 @@
       "name": "PSA FF Test Server Partition",
       "short_name": "PSA_FF_TEST_SERVER",
       "manifest": "${PSA_ARCH_TESTS_PATH}/api-tests/platform/manifests/server_partition_psa.json",
-      "source_path":"${PSA_ARCH_TESTS_PATH}",
+      "output_path": "api-tests/platform/manifests",
       "conditional": "PSA_API_TEST_IPC",
       "version_major": 0,
       "version_minor": 1,
@@ -51,7 +51,7 @@
       "name": "PSA FF Test Driver Partition",
       "short_name": "PSA_FF_TEST_DRIVER",
       "manifest": "${PSA_ARCH_TESTS_PATH}/api-tests/platform/manifests/driver_partition_psa.json",
-      "source_path":"${PSA_ARCH_TESTS_PATH}",
+      "output_path": "api-tests/platform/manifests",
       "conditional": "PSA_API_TEST_IPC",
       "version_major": 0,
       "version_minor": 1,
