Build: Add TFM_PARTITION_FF_TEST configuration
The manifest tool requires a CMake variable to get the enabled status
of PSA FF test Partitions.

This patch adds a TFM_PARTITION_FF_TEST and it is used as an non-user
configuration.

Change-Id: I2fa4a7b5a4ee5d815aa512468f7ed46e8b7e0a9c
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/tools/tfm_psa_ff_test_manifest_list.yaml
+++ b/tools/tfm_psa_ff_test_manifest_list.yaml
@@ -16,7 +16,7 @@
       "short_name": "PSA_FF_TEST_CLIENT",
       "manifest": "${PSA_ARCH_TESTS_PATH}/api-tests/platform/manifests/client_partition_psa.json",
       "output_path": "api-tests/platform/manifests",
-      "conditional": "PSA_API_TEST_IPC",
+      "conditional": "@TFM_PARTITION_FF_TEST@",
       "version_major": 0,
       "version_minor": 1,
       "pid": 512,
@@ -34,7 +34,7 @@
       "short_name": "PSA_FF_TEST_SERVER",
       "manifest": "${PSA_ARCH_TESTS_PATH}/api-tests/platform/manifests/server_partition_psa.json",
       "output_path": "api-tests/platform/manifests",
-      "conditional": "PSA_API_TEST_IPC",
+      "conditional": "@TFM_PARTITION_FF_TEST@",
       "version_major": 0,
       "version_minor": 1,
       "pid": 513,
@@ -52,7 +52,7 @@
       "short_name": "PSA_FF_TEST_DRIVER",
       "manifest": "${PSA_ARCH_TESTS_PATH}/api-tests/platform/manifests/driver_partition_psa.json",
       "output_path": "api-tests/platform/manifests",
-      "conditional": "PSA_API_TEST_IPC",
+      "conditional": "@TFM_PARTITION_FF_TEST@",
       "version_major": 0,
       "version_minor": 1,
       "pid": 514,
