Build: add cmake property to manage BL2_TRAILER_SIZE
Add cmake property to manage the trailer size in the code
and during the images building. If needed, a platform can
change this value in its config file.

Change-Id: Ifeed6ca2bf9a15c0f78880902f6cba8b0f9ed602
Signed-off-by: Ludovic Barre <ludovic.barre@foss.st.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -166,6 +166,7 @@ target_compile_definitions(platform_region_defs
         $<$<BOOL:${BL1}>:BL1>
         $<$<BOOL:${BL2}>:BL2>
         BL2_HEADER_SIZE=${BL2_HEADER_SIZE}
+        BL2_TRAILER_SIZE=${BL2_TRAILER_SIZE}
         $<$<BOOL:${SECURE_UART1}>:SECURE_UART1>
         DAUTH_${DEBUG_AUTHENTICATION}
         $<$<BOOL:${MCUBOOT_IMAGE_NUMBER}>:MCUBOOT_IMAGE_NUMBER=${MCUBOOT_IMAGE_NUMBER}>
