Move ns_agent_mailbox partition to manifest scheme
Rather than using hand-coded load_info, add a manifest file for
the new partition like the majority of the partitions.

I added a dummy service because a partition needs to either have
a service or handle an IRQ and we haven't yet got the IRQ code.
The dummy service will be removed when the actual IRQ handling
is added.

This also switches it to use a dedicated stack rather than
ER_INITIAL_PSP. Stack size is carried over.

Change-Id: I6fd2b2ac34cb1ec24755efa72d3e6822817c5c8d
Signed-off-by: Chris Brand <chris.brand@cypress.com>

--- a/tools/tfm_manifest_list.yaml
+++ b/tools/tfm_manifest_list.yaml
@@ -1,5 +1,6 @@
 #-------------------------------------------------------------------------------
 # Copyright (c) 2018-2021, Arm Limited. All rights reserved.
+# Copyright (c) 2021, Cypress Semiconductor Corporation. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -20,6 +21,21 @@
   "version_major": 0,
   "version_minor": 1,
   "manifest_list": [
+    {
+      "name": "Non-Secure Mailbox Agent",
+      "short_name": "TFM_NS_AGENT_MAILBOX",
+      "manifest": "${CMAKE_SOURCE_DIR}/secure_fw/partitions/ns_agent_mailbox/ns_agent_mailbox.yaml",
+      "output_path": "secure_fw/partitions/ns_agent_mailbox",
+      "conditional": "@TFM_MULTI_CORE_TOPOLOGY@",
+      "version_major": 0,
+      "version_minor": 1,
+      "pid": 0,
+      "linker_pattern": {
+        "library_list": [
+           "*tfm_*ns_agent_mailbox.*"
+         ],
+      }
+    },
     {
       "name": "Protected Storage Service",
       "short_name": "TFM_SP_PS",
