--- a/interface/include/psa_manifest/pid.h.template
+++ b/interface/include/psa_manifest/pid.h.template
@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2019-2021, Arm Limited. All rights reserved.
+ * Copyright (c) 2021, Cypress Semiconductor Corporation. All rights reserved.
  *
  * SPDX-License-Identifier: BSD-3-Clause
  *
@@ -15,11 +16,7 @@ extern "C" {
 #endif
 
 {% for partition in partitions %}
-    {% if partition.attr.pid - 256 < 0 %}
-#error "Partition ID for '{{partition.manifest.name}}' have to be at least TFM_SP_BASE"
-    {% else %}
 #define {{"%-62s"|format(partition.manifest.name)}} ({{partition.attr.pid}})
-    {% endif %}
 {% endfor %}
 
 #define {{"%-62s"|format("TFM_MAX_USER_PARTITIONS")}} ({{partitions | length()}})
