--- a/interface/include/config_impl.h.template
+++ b/interface/include/config_impl.h.template
@@ -58,7 +58,7 @@
 
 #endif /* CONFIG_TFM_SPM_BACKEND_IPC == 1 */
 
-#if (CONFIG_TFM_FP > 0) && (CONFIG_TFM_SPM_BACKEND_SFN == 1)
+#if (CONFIG_TFM_FLOAT_ABI > 0) && (CONFIG_TFM_SPM_BACKEND_SFN == 1)
 #error "FP is not supported for SFN model."
 #endif
 
