Interface: Improvements on framework_feature
- Restrict variable replacement on "@VAR@" only
- Set PSA_FRAMEWORK_ISOLATION_LEVEL before configure_file
- Add invalid config check on:
    TFM_LIB_MODEL AND PSA_FRAMEWORK_ISOLATION_LEVEL

Change-Id: Ib3a681716dfb148f62ca4ea0c03b2de9a65b7ca5
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/interface/include/psa/framework_feature.h.in
+++ b/interface/include/psa/framework_feature.h.in
@@ -8,7 +8,7 @@
 #ifndef __PSA_FRAMEWORK_FEATURE_H__
 #define __PSA_FRAMEWORK_FEATURE_H__
 
-#cmakedefine PSA_FRAMEWORK_ISOLATION_LEVEL  ${TFM_ISOLATION_LEVEL}
+#cmakedefine PSA_FRAMEWORK_ISOLATION_LEVEL  @PSA_FRAMEWORK_ISOLATION_LEVEL@
 #cmakedefine01 PSA_FRAMEWORK_HAS_MM_IOVEC
 
 #endif /* __PSA_FRAMEWORK_FEATURE_H__ */
