Build: Create a dedicated target for the interface of CC-312 stack
This patch introduces a dedicated target for the interface
APIs to help modularize the CC-312 stack build process.

Signed-off-by: Antonio de Angelis <antonio.deangelis@arm.com>
Change-Id: Ia2074e8b5e544f7ef82767af520bbf9698edf27d

--- a/lib/ext/cryptocell-312-runtime/codesafe/src/crypto_api/CMakeLists.txt
+++ b/lib/ext/cryptocell-312-runtime/codesafe/src/crypto_api/CMakeLists.txt
@@ -10,7 +10,7 @@
 target_include_directories(${CC312_LIB_TARGET}
     PUBLIC
         cc3x_sym/driver
-    PRIVATE
+    INTERFACE
         common
         cc3x_sym/api
         pki/poly
