SPM: Enable FP usage in NSPE for gnu arm embedded toolchain
1. Enable FP usage in SPE and NSPE by same parameter: CONFIG_TFM_FP
   (soft and hard ABI types) for IPC model.
   It doesn't support LIBRARY or SFN model at current stage.
2. Enable lazy stacking by CONFIG_TFM_LAZY_STACKING (OFF, ON).

Note: Same FP ABI type shall be used for SPE and NSPE at the same
      time, for FP design in Armv8.0-M architecture requires consistent
      FP ABI types between SPE and NSPE.

Signed-off-by: Feder Liang <Feder.Liang@arm.com>
Change-Id: I186d55d0a9d47b8d49693c919a6fcd1e061dc36d

--- a/interface/include/config_impl.h.template
+++ b/interface/include/config_impl.h.template
@@ -55,4 +55,8 @@
 #error "Invalid partition number input, check configurations."
 {% endif %}
 
+#if (CONFIG_TFM_FP > 0) && (CONFIG_TFM_SPM_BACKEND_SFN == 1)
+#error "FP is not supported for SFN model."
+#endif
+
 #endif /* __CONFIG_IMPL_H__ */
