--- a/interface/include/config_impl.h.template
+++ b/interface/include/config_impl.h.template
@@ -66,6 +66,11 @@
 {% else %}
 #error "Invalid partition number input, check configurations."
 {% endif %}
+
+#if (CONFIG_TFM_SPE_FP > 0) && (CONFIG_TFM_SPM_BACKEND_SFN == 1)
+#error "FP is not supported for SFN model."
+#endif
+
 #include "psa_interface_redirect.h"
 
 #endif /* __CONFIG_IMPL_H__ */
