Build: Fix the build of IPC model specific file
Include IPC model specific header files only when TFM_PSA_API is ON.
Build IPC model interrupt files only when TFM_PSA_API is ON.

Change-Id: I5b308b09116751766301171c9605cdc8a9b50245
Signed-off-by: David Hu <david.hu@arm.com>

--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -74,7 +74,7 @@ target_sources(tfm_spm
 
 target_include_directories(tfm_spm_defs
     INTERFACE
-        ${CMAKE_CURRENT_SOURCE_DIR}/cmsis_psa
+        $<$<BOOL:${TFM_PSA_API}>:${CMAKE_CURRENT_SOURCE_DIR}/cmsis_psa>
 )
 
 target_link_libraries(tfm_spm
