--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -24,12 +24,17 @@ if (TFM_EXTRA_MANIFEST_LIST_FILES)
     list(APPEND TEMP_MANIFEST_LISTS ${TFM_EXTRA_MANIFEST_LIST_FILES})
 endif()
 
-# Build up the manifest list array
-# Each manifest list occupies two elements in manifest list array:
-# - Manifest list path under build directory after configure_file()
-# - The original path of manifest list in source directory. It can be used to
-#   build up manifest file path if manifest file path is a relative one in
-#   manifest list.
+# Build up the manifest list arrays:
+# - CONFIGURED_MANIFEST_LISTS:
+#       Array of Manifest lists under build directory which are the output of configure_file().
+# - MANIFEST_LIST_PATHS:
+#       Array of paths of the input manifest lists of configure_file().
+#       They are NOT the paths of CONFIGURED_MANIFEST_LISTS.
+#       They can be used to build up manifest file paths if manifest file paths are
+#       relative ones in the manifest lists.
+# - COMBINED_LIST:
+#       A combined list of the above two, with the following format:
+#           [configured_list_a, path_of_list_a, configured_list_b, path_of_list_b ... ]
 set(POSTFIX 1)
 
 foreach(MANIFEST_LIST IN LISTS TEMP_MANIFEST_LISTS)
@@ -38,15 +43,16 @@ foreach(MANIFEST_LIST IN LISTS TEMP_MANIFEST_LISTS)
     endif()
 
     get_filename_component(MANIFEST_LIST_NAME ${MANIFEST_LIST} NAME_WLE)
-    set(TEMP_MANIFEST_LIST
+    set(CONFIGURED_LIST
         ${CMAKE_CURRENT_BINARY_DIR}/${MANIFEST_LIST_NAME}_${POSTFIX}.yaml)
 
-    configure_file(${MANIFEST_LIST} ${TEMP_MANIFEST_LIST})
-    list(APPEND MANIFEST_LISTS ${TEMP_MANIFEST_LIST})
+    configure_file(${MANIFEST_LIST} ${CONFIGURED_LIST})
+    list(APPEND CONFIGURED_MANIFEST_LISTS ${CONFIGURED_LIST})
+    list(APPEND COMBINED_LIST             ${CONFIGURED_LIST})
 
     get_filename_component(MANIFEST_LIST_PATH ${MANIFEST_LIST} DIRECTORY)
-    # Append the original path of the manifest list.
-    list(APPEND MANIFEST_LISTS ${MANIFEST_LIST_PATH})
+    list(APPEND MANIFEST_LIST_PATHS ${MANIFEST_LIST_PATH})
+    list(APPEND COMBINED_LIST       ${MANIFEST_LIST_PATH})
 
     math(EXPR POSTFIX "${POSTFIX} + 1")
 endforeach()
@@ -59,7 +65,7 @@ set(GENERATED_FILE_LISTS ${GENERATED_FILE_LISTS} ${TFM_EXTRA_GENERATED_FILE_LIST
 ############################### Dependency generation ##########################
 
 function(parse_field_from_yaml files field output_variable)
-    set(${output_variable} "" PARENT_SCOPE)
+    set(local_variable "")
     foreach(yaml_file ${files})
         # Load the lines that refer to the key we selected
         file(STRINGS ${yaml_file} temp_variable REGEX " *\"${field}\":")
@@ -69,21 +75,39 @@ function(parse_field_from_yaml files field output_variable)
         list(TRANSFORM temp_variable REPLACE "," "")
         # Remove all quote marks
         list(TRANSFORM temp_variable REPLACE "\"" "")
-        set(${output_variable} ${${output_variable}} ${temp_variable} PARENT_SCOPE)
+        list(APPEND local_variable ${temp_variable})
     endforeach()
+    set(${output_variable} ${local_variable} PARENT_SCOPE)
 endfunction()
 
 parse_field_from_yaml("${GENERATED_FILE_LISTS}" template TEMPLATE_FILES)
 # Replace relative paths with absolute paths
+# Paths used in GENERATED_FILE_LISTS are all relative to TF-M root (${CMAKE_SOURCE_DIR})
 list(TRANSFORM TEMPLATE_FILES REPLACE "^([^/\\][^:].*)" "${CMAKE_SOURCE_DIR}/\\1")
 
 parse_field_from_yaml("${GENERATED_FILE_LISTS}" output OUTPUT_FILES)
 # Replace relative paths with absolute paths
+# Paths used in GENERATED_FILE_LISTS are all relative to TF-M root (${CMAKE_SOURCE_DIR})
 list(TRANSFORM OUTPUT_FILES REPLACE "^([^/\\][^:].*)" "${CMAKE_BINARY_DIR}/generated/\\1")
 
-parse_field_from_yaml("${MANIFEST_LISTS}" manifest MANIFEST_FILES)
-# Replace relative paths with absolute paths
-list(TRANSFORM MANIFEST_FILES REPLACE "^([^/\\][^:].*)" "${CMAKE_SOURCE_DIR}/\\1")
+# Each manifest list may have different original path
+# Parse them one by one
+set(INDEX 0)
+foreach(CONFIGURED_LIST ${CONFIGURED_MANIFEST_LISTS})
+    list(GET MANIFEST_LIST_PATHS ${INDEX} PATH_OF_LIST)
+
+    parse_field_from_yaml(${CONFIGURED_LIST} manifest MANIFESTS)
+    foreach(MANIFEST ${MANIFESTS})
+        # The path of each manifest must be absolute path or relative path to
+        # the path of manifest list that holds it
+        if (NOT IS_ABSOLUTE ${MANIFEST})
+            set(MANIFEST "${PATH_OF_LIST}/${MANIFEST}")
+        endif()
+        list(APPEND MANIFEST_FILES ${MANIFEST})
+    endforeach()
+
+    math(EXPR INDEX "${INDEX} + 1")
+endforeach()
 
 ############################### Command declaration ############################
 
@@ -101,11 +125,11 @@ add_custom_target(tfm_generated_files
 
 add_custom_command(OUTPUT ${OUTPUT_FILES}
     COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/tfm_parse_manifest_list.py
-                                  -m ${MANIFEST_LISTS}
+                                  -m ${COMBINED_LIST}
                                   -f ${GENERATED_FILE_LISTS}
                                   -o ${CMAKE_BINARY_DIR}/generated
     DEPENDS ${TEMPLATE_FILES} ${MANIFEST_FILES}
-    DEPENDS ${MANIFEST_LISTS}
+    DEPENDS ${TEMP_MANIFEST_LISTS} ${CONFIGURED_MANIFEST_LISTS} ${GENERATED_FILE_LISTS}
 )
 
 # The files need to be generated before cmake will allow them to be used as
@@ -113,7 +137,7 @@ add_custom_command(OUTPUT ${OUTPUT_FILES}
 # is to run the script at cmake-time.
 execute_process(
     COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/tfm_parse_manifest_list.py
-                                  -m ${MANIFEST_LISTS}
+                                  -m ${COMBINED_LIST}
                                   -f ${GENERATED_FILE_LISTS}
                                   -o ${CMAKE_BINARY_DIR}/generated
     RESULT_VARIABLE RET
