--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -124,6 +124,7 @@ target_compile_definitions(platform_ns
         # CONFIG_TFM_FP
         $<$<STREQUAL:${CONFIG_TFM_FP},hard>:CONFIG_TFM_FP=2>
         $<$<STREQUAL:${CONFIG_TFM_FP},soft>:CONFIG_TFM_FP=0>
+        $<$<BOOL:${TEST_NS_FPU}>:TEST_NS_FPU>
     PRIVATE
         $<$<BOOL:${TEST_NS_SLIH_IRQ}>:TEST_NS_SLIH_IRQ>
 )
