--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2020-2021, Arm Limited. All rights reserved.
+# Copyright (c) 2020-2022, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -90,22 +90,18 @@ endif()
 add_subdirectory(lib/ext)
 add_subdirectory(lib/fih)
 add_subdirectory(tools)
-if(NS)
-    # Set to ${TFM_TEST_REPO_PATH}/app by default
-    add_subdirectory(${TFM_APP_PATH} ${CMAKE_CURRENT_BINARY_DIR}/app)
-    add_subdirectory(${TFM_NS_LOG_PATH} ${CMAKE_CURRENT_BINARY_DIR}/ns_log)
-endif()
 add_subdirectory(secure_fw)
+
+if(NS OR TFM_S_REG_TEST OR TFM_NS_REG_TEST)
+    add_subdirectory(${TFM_TEST_REPO_PATH} ${CMAKE_CURRENT_BINARY_DIR}/tf-m-tests)
+endif()
+
 add_subdirectory(interface)
 if(BL2)
     add_subdirectory(bl2)
 endif()
-add_subdirectory(platform)
 
-if(TFM_NS_REG_TEST OR TFM_S_REG_TEST)
-    # Set to ${TFM_TEST_REPO_PATH}/test by default
-    add_subdirectory(${TFM_TEST_PATH} ${CMAKE_CURRENT_BINARY_DIR}/test)
-endif()
+add_subdirectory(platform)
 
 include(cmake/install.cmake)
 
