Platform: Add boot measurement interface
Declare a common interface for storing measurements
(of software components) from a bootloader that can
be processed later at runtime.

Also,  add boot_measurement.h to arm/rss.
boot_measurement.h is platform specific header, required
when the Measured Boot partition is enabled.

Change-Id: I7f0cc346ca53a4285842061a76f859cc209c9c6e
Signed-off-by: David Vincze <david.vincze@arm.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -223,6 +223,7 @@ if(BL1 AND PLATFORM_DEFAULT_BL1)
             tfm_fih_implementation
             tfm_fih_headers
             $<$<BOOL:${CRYPTO_HW_ACCELERATOR}>:bl1_crypto_hw>
+            tfm_boot_status
     )
 
 endif()
